Conversor logic fully working. Fixed decimal logic. Added button for exchange currencies. The flags are visible in selector list

--- a/src/app/conversor-calc/conversor-calc.component.scss
+++ b/src/app/conversor-calc/conversor-calc.component.scss
@@ -15,12 +15,6 @@ mat-spinner {
   right: 0;
 }
 
-button {
-  width: 33%;
-  height: 22%;
-  color: white;
-}
-
 .display {
   padding-top: 56px;
   width: 100%;
@@ -49,11 +43,13 @@ button {
 }
 
 .action-buttons {
-  width: 100%;
+  width: 25%;
 }
 
 .action-button {
-  width: 25%;
+  width: 100%;
+  height: 22%;
+  color: white;
 }
 
 .conversor-calc-container {
@@ -78,4 +74,16 @@ input {
 
 :host/deep/ .mat-form-field-label-wrapper {
   text-align: left;
+}
+
+.divider-size {
+  width: 45%;
+}
+
+.avatar-currencies{
+  flex-shrink: 0;
+  width: 40px;
+  height: 30px;
+  object-fit: cover;
+  margin-right: 20%;
 }
